--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -4,30 +4,47 @@ name: Linters
 on: push
 
 jobs:
-    "Prettier":
+    "Prettier-API":
         runs-on: ubuntu-latest
         container: node:16
-        working-directory: api
 
         steps:
             - uses: actions/checkout@v2
 
             - name: Install Dependencies
+              working-directory: api
               run: yarn install
 
             - name: Run Prettier Check
+              working-directory: api
+              run: yarn run prettier:check
+
+    "Prettier-Frontend":
+        runs-on: ubuntu-latest
+        container: node:16
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Install Dependencies
+              working-directory: frontend
+              run: yarn install
+
+            - name: Run Prettier Check
+              working-directory: frontend
               run: yarn run prettier:check
 
     "Tests":
         runs-on: ubuntu-latest
         container: node:16
-        working-directory: api
 
         steps:
             - uses: actions/checkout@v2
 
             - name: Install Dependencies
+              working-directory: api
               run: yarn install
 
             - name: Run Prettier Check
+              working-directory: api
               run: yarn test
